[project]
name = "makemore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "accelerate>=1.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.8",
    "matplotlib>=3.7.5",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
]
